--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+button {
+    cursor: pointer;
+    border-style: none;
+    padding: .4em 1.3em;
+    letter-spacing: 2px;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 21px;
+    background-color: #00CBFF;
+    color: white;
+    
+}
+
+button:focus {
+    background-color: white;
+    outline: none;
+    color: #00CBFF;
+}
+
